# openfloor-python

./: .buildinfo  .gitignore  LICENSE  LICENSE.txt  README.md  dialog_event.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  testpypi.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: agent.doctree  dialog_event.doctree  envelope.doctree  events.doctree  json_serializable.doctree  manifest.doctree
.github/workflows/: deploy_docs.yml
_modules/: index.html
_modules/openfloor/: agent.html  dialog_event.html  envelope.html  events.html  json_serializable.html  manifest.html
_sources/api/: dialog_event.rst.txt  json_serializable.rst.txt
api/: agent.html  dialog_event.html  envelope.html  events.html  json_serializable.html  manifest.html
docs/: InteroperableConvEnvSpec.md
notepads/: DialogEvent.ipynb  Envelope.ipynb  Manifest.ipynb  Test DialogEvent.ipynb
python/: pyproject.toml  requirements.txt
python/notepads/: Agent.ipynb  DialogEvent.ipynb  Manifest.ipynb
python/notepads/.ipynb_checkpoints/: Agent-checkpoint.ipynb
python/notepads/.virtual_documents/: Agent.ipynb
python/sample_json/: envelope0.json  envelope1.json  envelope2.json  out_envelope0.json  out_envelope1.json
python/src/: envelope1.json  requirements.txt
python/src/openfloor/: __init__.py  agent.py  dialog_event.py
python/src/sphinx_docs/: build_docs.bat  conf.py  index.rst
python/src/sphinx_docs/api/: agent.rst  envelope.rst  events.rst  manifest.rst
sample_json/: dialog_event1.json  envelope1.json  manifest1.json
src/: __init__.py  envelope1.json
src/openfloor/: __init__.py  _dialogEvent.py  dialog_event.py  envelope.py  events.py  json_serializable.py  manifest.py
