[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfloor"
version = "0.1.1"
description = "A Python implementation of the Open Floor specification for interoperable conversational environments"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = [ "LICENSE.txt" ]
authors = [
    { name = "David Attwater", email = "davidattwater@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonpath-ng>=1.5.0",
    "events>=0.5"
]

[project.urls]
Homepage = "https://github.com/open-voice-interoperability"
Documentation = "https://github.com/open-voice-interoperability/openfloor-python/blob/main/README.md"
Repository = "https://github.com/open-voice-interoperability/openfloor-python"
Issues = "https://github.com/open-voice-interoperability/openfloor-python/issues"
Specifications = "https://github.com/open-voice-interoperability/openfloor-docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pip-tools"
]


[tool.setuptools.packages.find]  
where = ["./python/src"]  

[tool.hatch.build.targets.wheel]
packages = ["python/src/openfloor"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=python/src --cov-report=term-missing" 

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [ '^current_version = "{version}"', '^version = "{version}"' ]
"python/src/version.py" = ["{version}"]
"python/src/openfloor/__init__.py" = ["{version}"]

